--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@
     color: var(--secondary-color);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     display: flex;
     background-color: var(--primary-color);
@@ -111,18 +115,18 @@ nav i{
     margin-bottom: 2em;
 }
 
-.left-side button{
+.var-button{
     max-width: 11em;
     font-size: 1.1em;
     background-color: var(--secondary-color);
     border: none;
     color: var(--primary-color);
     border-radius: .3em;
-    padding: .5em;
+    padding: .5em 1em;
     cursor: pointer;
 }
 
-.left-side button:hover{
+.var-button:hover{
     background-color: #f76349;
     color: var(--secondary-color);
     font-weight: 500;
@@ -237,9 +241,8 @@ nav i{
     display: flex;
     flex-direction: column;
     gap: 2em;
-    padding: 3em 6em;
-    margin-top: 4em;
-    height: 100vh;
+    padding: 7em 6em;
+    margin-top: 2em;
     align-items: center;
 }
 
@@ -252,7 +255,13 @@ nav i{
 
 .list h2{
     font-size: 3em;
-    margin-bottom: 1em;
+    margin-bottom: 0;
+    line-height: .25em;
+}
+
+.list p{
+    margin-bottom: 4em;
+    opacity: .75;
 }
 
 .list h3{
@@ -278,4 +287,172 @@ nav i{
     gap: 1em;
     width: 100%;
     max-width: 15em;
+}
+
+
+
+.projects{
+    display: flex;
+    flex-direction: column;
+    padding: 0em 6em;
+    /* margin-top: 4em; */
+    height: 100vh;
+    align-items: center;
+}
+
+.projects h2{
+    font-size: 3em;
+    line-height: 1.75em;
+}
+
+.projects p{
+    font-size: .8em;
+    opacity: .75;
+    margin-bottom: 4em;
+}
+
+.slider-container {
+    position: relative;
+    width: 800px;
+    max-width: 90%;
+    margin-bottom: 2em;
+}
+
+/* Estilos del mockup de laptop */
+.laptop-mockup {
+    position: relative;
+    width: 100%;
+}
+
+.iphone-mockup {
+    position: absolute;
+    width: 25%;
+    bottom: 0;
+    right: 0;
+    z-index: 10000;
+}
+
+.laptop-mockup img {
+    width: 100%;
+    display: block;
+    z-index: 1000;
+}
+
+.iphone-mockup img {
+    width: 100%;
+    display: block;
+    z-index: 1000;
+}
+
+/* Contenedor para las imágenes del slider */
+.screen-container {
+    position: absolute;
+    top: 12%; /* Ajusta la posición según la imagen del mockup */
+    left: 12.5%;
+    width: 75%;
+    height: 75.75%;
+    overflow: hidden;
+    border-radius: 2px; /* Simula la curvatura de la pantalla */
+}
+
+.iphone-screen-container {
+    position: absolute;
+    top: 6.5%; /* Ajusta la posición según la imagen del mockup */
+    left: 12.5%;
+    width: 75.5%;
+    height: 87%;
+    overflow: hidden;
+    border-radius: 20px; /* Simula la curvatura de la pantalla */
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    z-index: -1000;
+    cursor: pointer;
+    transition: all .25s ease-in-out;
+}
+
+.swiper-slide img:hover{
+    filter: brightness(50%); /* Oscurece la imagen al 50% */
+}
+
+.swiper-slide i {
+    position: absolute;
+    bottom: 40%; /* Ajusta la posición del texto */
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 5em;
+    color: #ffff;
+    text-align: center;
+    font-weight: 800;
+    opacity: 0; /* Inicialmente oculto */
+    transition: opacity 0.3s ease; /* Transición suave para la aparición */
+}
+
+.swiper-slide:hover i {
+    opacity: .75; /* Muestra el texto al hacer hover */
+}
+
+
+.iphone-swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    z-index: -1000;
+}
+
+/* Botones de navegación */
+.swiper-button-next::after,
+.swiper-button-prev::after {
+    color: #f76349; /* Color de las flechas */
+    background-color: rgba(198, 198, 198, 0.1); /* Fondo semi-transparente */
+    padding: 0 .7em;
+    height: 100%;
+    width: 100%;
+    border-radius: 1000em; /* Redondeado */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s;
+    --swiper-navigation-size: 20em;
+    font-weight: 1000;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    font-size: 1px;
+    width: 1px;
+    height: 1px;
+}
+
+.swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background: rgba(223, 223, 223, 0.403) !important; /* Color normal */
+    opacity: 0.5;
+    transition: 0.3s;
+    color: #f76349;
+}
+
+.swiper-pagination-bullet-active {
+    opacity: 1;
+    transform: scale(1.2); /* Hace el punto activo un poco más grande */
+    background: #f76349 !important;
+}
+
+footer{
+    border-top: 1px solid rgba(128, 128, 128, 0.256);
+    padding: 2em 0;
+}
+
+footer p{
+    margin-left: 3em;
+    opacity: .75;
 }
