--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* ---------------------------------------------- BASE */
+
 :root{
     --primary-color: #edf2fc;
     --secondary-color: #161616;
@@ -27,6 +29,13 @@ body{
     width: 100%;
     height: 100vh;
     justify-content: center;
+    padding: 0 6em;
+}
+
+@media (max-width: 1024px){
+    body{
+        padding: 0 2em;
+    }
 }
 
 main{
@@ -37,6 +46,10 @@ p{
     line-height: 1.75em;
 
 }
+
+
+
+/* ---------------------------------------------- NAV */
 
 nav{
     display: flex;
@@ -69,11 +82,11 @@ nav{
 
 .links-container a{
     text-decoration: none;
+    transition: all .15s ease-in-out;
 }
 
 .links-container a:hover{
     color: #f76349;
-    transition: all .15s ease-in-out;
 }
 
 nav i{
@@ -82,13 +95,128 @@ nav i{
     opacity: .7;
     cursor: pointer;
     margin-left: 2em;
+    transition: all .15s ease-in-out;
 }
+
+nav i:hover{
+    color: #f76349;
+}
+
+.ham{
+    cursor: pointer;
+    display: none;
+}
+
+.nav-item {
+    list-style: none;
+    position: relative;
+    height: 100%;
+    --clip: polygon(0 0, 100% 0%, 100% 0, 0 0);
+    --transform: rotate(-90deg);
+}
+
+.hid-list {
+    list-style: none;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: max-content;
+    background: snow;
+}
+
+.link-arrow {
+    display: block;
+    margin-left: 10px;
+}
+  
+  
+.nav-item:hover {
+    --clip: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+    --transform: rotate(0deg);
+}
+
+/* ---------------------------------------------- NAV MEDIA */
+
+@media (max-width: 1024px){
+    .ham{
+        display: flex;
+        z-index: 1000;
+    }
+    .links-container {
+        position: fixed;
+        max-width: 260px;
+        width: 100%;
+        padding: 30% 0px;
+        top: 0;
+        right: 0;
+        background: var(--secondary-color);
+        overflow-y: auto;
+        display: -ms-grid;
+        display: grid;
+        grid-auto-rows: -webkit-max-content;
+        grid-auto-rows: max-content;
+        -webkit-transform: translateX(100%);
+                transform: translateX(100%);
+        border-left: 3px solid white;
+        text-align: right;
+        border-bottom-left-radius: 1.5em;
+        transition: .25s all ease-in-out;
+        z-index: 10;
+    }
+    .links-container a{
+        color: var(--primary-color);
+        margin-right: 2em;
+    }
+    .links-container i{
+        color: var(--primary-color);
+        margin: 0;
+        margin-right: 1.5em;
+    }
+    .nav-item {
+        --clip:0;
+        overflow: hidden;
+    }
+    .btn-signup {
+        overflow: hidden;
+        display: none;
+    }
+    .menu-item--active {
+        --transform: rotate(0);
+        --background: rgb(241, 241, 241);
+    }
+    .nav-item--show {
+        background: var(--background);
+    }
+    .links-container--show {
+        -webkit-transform: unset;
+                transform: unset;
+        width: 100%;
+    }
+    .link-arrow {
+        margin-left: auto;
+        margin-right: 20px;
+    }
+    .hid-list {
+        display: -ms-grid;
+        display: grid;
+        position: unset;
+        width: 100%;
+        -webkit-transform: translateY(0);
+                transform: translateY(0);
+        height: 0;
+        -webkit-transition: height .3s;
+        transition: height .3s;
+    }
+
+}
+
+/* ---------------------------------------------- HOME */
 
 .home{
     display: flex;
     flex-direction: row;
     gap: 5em;
-    padding: 2em 6em;
+    padding: 2em 0;
     height: 100vh;
 }
 
@@ -96,7 +224,9 @@ nav i{
     flex: 1.2;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
+    width: 100%;
+    min-width: 40%;
 }
 
 .left-side h1{
@@ -124,13 +254,13 @@ nav i{
     border-radius: .3em;
     padding: .5em 1em;
     cursor: pointer;
+    transition: all .2s ease-in-out;
 }
 
 .var-button:hover{
     background-color: #f76349;
     color: var(--secondary-color);
     font-weight: 500;
-    transition: all .15s ease-in-out;
 }
 
 .social-links{
@@ -166,14 +296,29 @@ nav i{
     max-height: 50em;
 }
 
+/* ---------------------------------------------- ABOUT */
+
 
 .about-me{
     display: flex;
+    flex-direction: column;
+    padding: 4em 0;
+    height: 100%;
+    max-height: 1080px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 7em;
+}
+
+.about-container{
+    display: flex;
     flex-direction: row;
     gap: 5em;
-    padding: 4em 6em;
-    margin-top: 4em;
-    height: 60vh;
+    height: 100%;
+    max-height: 50%;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
 .about-left-side{
@@ -181,6 +326,7 @@ nav i{
     display: flex;
     flex-direction: column;
     /* border: 1px solid red; */
+    min-width: 25%;
 }
 
 .about-right-side{
@@ -188,6 +334,7 @@ nav i{
     display: flex;
     flex-direction: column;
     /* border: 1px solid blue; */
+    min-width: 25%;
 }
 
 .about-me h1{
@@ -236,20 +383,21 @@ nav i{
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
+/* ---------------------------------------------- SKILLS */
 
 .list{
     display: flex;
     flex-direction: column;
     gap: 2em;
-    padding: 7em 6em;
-    margin-top: 2em;
+    padding: 0em 0;
+    margin-bottom: 10em;
     align-items: center;
 }
 
 .list i{
     font-size: 1.5em;
     color: #f76349;
-    font-weight: 600;
+    /* font-weight: 600; */
     opacity: 1;
 }
 
@@ -260,14 +408,14 @@ nav i{
 }
 
 .list p{
-    margin-bottom: 4em;
+    margin-bottom: 2em;
     opacity: .75;
 }
 
 .list h3{
     display: flex;
     align-items: center;
-    gap: .5em;
+    gap: 1em;
 }
 
 .list p{
@@ -279,6 +427,10 @@ nav i{
     flex-direction: row;
     gap: 4em;
     margin-bottom: 1.5em;
+    margin-top: 3em;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 70em;
 }
 
 .card{
@@ -286,15 +438,21 @@ nav i{
     flex-direction: column;
     gap: 1em;
     width: 100%;
-    max-width: 15em;
+    flex: 1 1 15em;
+    max-width: 18em;
+    min-width: 10em;
 }
 
+.card p{
+    margin-top: .75em;
+}
 
+/* ---------------------------------------------- PROJECTS */
 
 .projects{
     display: flex;
     flex-direction: column;
-    padding: 0em 6em;
+    padding: 0em 0;
     /* margin-top: 4em; */
     height: 100vh;
     align-items: center;
@@ -313,8 +471,8 @@ nav i{
 
 .slider-container {
     position: relative;
-    width: 800px;
-    max-width: 90%;
+    width: 50%;
+    /* max-width: 90%; */
     margin-bottom: 2em;
 }
 
@@ -447,6 +605,8 @@ nav i{
     background: #f76349 !important;
 }
 
+/* ---------------------------------------------- FOOTER */
+
 footer{
     border-top: 1px solid rgba(128, 128, 128, 0.256);
     padding: 2em 0;
@@ -455,4 +615,50 @@ footer{
 footer p{
     margin-left: 3em;
     opacity: .75;
+}
+
+/* ---------------------------------------------- MEDIA */
+
+@media (max-width: 1024px) {
+    .right-side{
+        display: none;
+    }
+    .list{
+        margin-top: 25em;
+    }
+    .projects{
+        justify-content: center;
+    }
+    nav{
+        padding: 2em 2em;
+    }
+    .slider-container{
+        width: 75%;
+    }
+    .about-me span{
+        display: none;
+    }
+    .about-me{
+        gap: 0.5em;
+    }
+    .about-right-side{
+        text-align: right;
+    }
+    .card-container{
+        text-align: center;
+        justify-content: center;
+    }
+    .card-container p{
+        text-align: left;
+    }
+    .iphone-screen-container {
+        border-radius: 8px; /* Simula la curvatura de la pantalla */
+    }
+    .about-left-side{
+        min-width: 50%;
+    }
+    
+    .about-right-side{
+        min-width: 50%;
+    }
 }
